# Furby_2012_Boom_Audio

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  combine.py  convert.py  dupe.py  encode_bmp.py  encode_wav.py  full_split.py  hex_to_bin.py  pyproject.toml  split.py
Furby Exported Files/French Boom - a18 Files/: audio0002.a18  audio0017.a18  audio0018.a18  audio0022.a18  audio0023.a18  audio0027.a18  audio0029.a18  audio0032.a18  audio0046.a18  audio0049.a18  audio0050.a18  audio0052.a18  audio0059.a18  audio0069.a18  audio0073.a18  audio0075.a18  audio0076.a18  audio0080.a18  audio0083.a18  audio0088.a18  audio0091.a18  audio0094.a18  audio0097.a18  audio0101.a18  audio0106.a18  audio0108.a18  audio0113.a18  audio0115.a18  audio0123.a18  audio0125.a18  audio0126.a18  audio0131.a18  audio0132.a18  (+493 more)
Furby_Dumper/: FurbyDumper.py  Furby_Dumper.ino  Furby_Dumper_old.ino  dump.py
a18_files/: audio0003.a18  audio0008.a18  audio0013.a18  audio0014.a18  audio0016.a18  audio0020.a18  audio0021.a18  audio0024.a18  audio0025.a18  audio0028.a18  audio0030.a18  audio0035.a18  audio0036.a18  audio0038.a18  audio0039.a18  audio0040.a18  audio0042.a18  audio0043.a18  audio0044.a18  audio0045.a18  audio0048.a18  audio0054.a18  audio0055.a18  audio0060.a18  audio0061.a18  audio0062.a18  audio0063.a18  audio0065.a18  audio0066.a18  audio0067.a18  audio0068.a18  audio0072.a18  audio0079.a18  audio0082.a18  audio0084.a18  audio0085.a18  audio0086.a18  audio0089.a18  audio0092.a18  audio0093.a18  (+1083 more)
rom/: run.py
tests/: test_builder.py  test_rom.py
(+5113 files in other folders)
